--- a/room.css
+++ b/room.css
@@ -2,11 +2,13 @@ html{
     scroll-behavior: smooth;
 }
 .head{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Nunito', sans-serif;
     text-align: center;
     color:yellow;
 }
-
+h1{
+    font-family: 'DotGothic16', sans-serif;
+}
 .header{
     display:flex;
     margin-top:10px;
@@ -42,7 +44,7 @@ html{
     text-align:center;
     margin-left: 10px;
     cursor: pointer;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Nunito', sans-serif;
     transition:all .5s;
 }
 .but:hover{
@@ -61,11 +63,11 @@ html{
     font-size:18px;
     padding: 10px;
     width: 150px;
-    margin: 10px;
+    margin: 10px solid black;
     text-align:center;
     margin-left: 10px;
     cursor: pointer;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Nunito', sans-serif;
     transition:all .5s;
 }
 .but2:hover{
@@ -80,7 +82,7 @@ html{
     border-radius: 35px;
     text-align:left;
     padding-left: 30px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Nunito', sans-serif;
     font-size: 11px;
     width: 250px;
 }
@@ -100,7 +102,7 @@ html{
     margin-top: 10px;
     font-size:15px;
     line-height:30px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Nunito', sans-serif;
 
 }
 .details{
@@ -119,7 +121,7 @@ html{
     padding-left: 10px;
     cursor: pointer;
     line-height: 25px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Nunito', sans-serif;
     transition: box-shadow 0.5s,background-color .5s,font-size .5s;
 }
 .inner1:hover{
@@ -137,7 +139,7 @@ html{
     color: white;
     margin-top: 24px;
     line-height: 1.3;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Nunito', sans-serif;
     border-radius: 25px;
     background-color:rgb(37, 36, 36);
 }
